@@ -562,8 +562,8 @@ void frmMain::StoreServers()
             // last Schema
             key.Printf(wxT("Servers/LastSchema%d"), numServers);
             settings->Write(key, server->GetLastSchema());
-
-	    key.Printf(wxT("Servers/LastSSL%d"), numServers);
+            
+            key.Printf(wxT("Servers/SSL%d"), numServers);
             settings->Write(key, server->GetSSL());
         }
 
@@ -585,7 +585,7 @@ void frmMain::RetrieveServers()
     int numServers;
     settings->Read(wxT("Servers/Count"), &numServers, 0);
 
-    int loop, port, ssl;
+    int loop, port, ssl=0;
     wxString key, servername, description, database, username, lastDatabase, lastSchema, trusted;
     pgServer *server;
 
@@ -623,8 +623,11 @@ void frmMain::RetrieveServers()
         key.Printf(wxT("Servers/LastSchema%d"), loop);
         settings->Read(key, &lastSchema, wxT(""));
 
-	key.Printf(wxT("Servers/LastSSL%d"), loop);
-	settings->Read(key, &ssl, 0);
+        // SSL mode
+#ifdef SSL
+        key.Printf(wxT("Servers/SSL%d"), loop);
+        settings->Read(key, &ssl, 0);
+#endif
 
         // Add the Server node
         server = new pgServer(servername, database, username, port, StrToBool(trusted), ssl);
