@@ -1,5 +1,7 @@
 V0.9.1 Devel
 =============
+2003-08-25 AP - SSL support for win32
+           AP - save SSL option under Servers/SSL%d
 2003-08-24 AP - Provide dummy child item to make [+] appear in tree for table and view
            AP - proxy option
 		   AP - Shift-F10 in tree control for context menu
